[gd_scene load_steps=3 format=3 uid="uid://chhnwt5i2hiad"]

[ext_resource type="Script" path="res://items/item.gd" id="1_fom51"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3h1m0"]
size = Vector3(1.15978, 1, 0.565607)

[node name="Item" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.422247, 0)
script = ExtResource("1_fom51")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0816095, 0)
shape = SubResource("BoxShape3D_3h1m0")

[node name="Sprite3d" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.191, 0)
billboard = 1

[node name="Shadow" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.0489337, 0.343)
modulate = Color(0, 0, 0, 1)
billboard = 1

[connection signal="body_entered" from="." to="." method="_on_craft_resource_body_entered"]
